--- a/views/showwelcome.erb
+++ b/views/showwelcome.erb
@@ -4,13 +4,16 @@ aForm = <<-eos
 <html>
 <head>
 <title>Showing Fractal</title>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="jquery-1.10.2.min.js"> </script>
+</script>
 
 <script>
 $(document).ready(function(){  $("#bob").click(function(){    $("#sam").hide();  });
   $("#tom").click(function(){    $("#sam").fadeIn(10000);  });
-  $("#harry").click(function(){    $("#sam").attr("src", "feigenbaum.gif");  });});
+  $("#harry").click(function(){    $("#sam").attr("src", "feigenbaum.gif");  });
+  $("#sam").hover(function(){    $("#sam").attr("src", "feigenbaum.gif");  },
+  function() {  }
+  );});
 </script>
 </head>
 
