--- a/views/showwelcome.erb
+++ b/views/showwelcome.erb
@@ -4,7 +4,7 @@ aForm = <<-eos
 <html>
 <head>
 <title>Showing Fractal</title>
-<script type="text/javascript" src="jquery-1.10.2.min.js"> </script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </script>
 
 <script>
